--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -134,7 +134,7 @@
       <div class="relative bg-white" x-data="Components.popover({ open: false, focus: false })" x-init="init()" @keydown.escape="onEscape" @close-popover-group.window="onClosePopoverGroup">
         <div class="absolute inset-0 shadow z-30 pointer-events-none" aria-hidden="true"></div>
         <div class="relative z-20">
-          <div class="max-w-7xl mx-auto flex justify-between items-center px-4 py-5 sm:px-6 sm:py-4 lg:px-8 md:justify-start md:space-x-10">
+          <div class="max-w-7xl mx-auto flex justify-between items-center px-4 2xl:px-0 py-5 sm:py-4 md:justify-start md:space-x-10">
             <div>
               <a href="{% url 'blog:post_list' %}" class="flex">
                 <span class="sr-only">Home page</span>
@@ -160,7 +160,7 @@
                   </button>
 
                   <div x-show="open" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0 -translate-y-1" x-transition:enter-end="opacity-100 translate-y-0" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100 translate-y-0" x-transition:leave-end="opacity-0 -translate-y-1" x-description="'Solutions' flyout menu, show/hide based on flyout menu state." class="hidden md:block absolute z-10 top-full inset-x-0 transform shadow-lg bg-white" x-ref="panel" @click.away="open = false" style="display: none;">
-                    <div class="max-w-7xl mx-auto grid gap-y-6 px-4 py-6 sm:grid-cols-2 sm:gap-8 sm:px-6 sm:py-8 lg:grid-cols-4 lg:px-8 lg:py-12 xl:py-16">
+                    <div class="max-w-7xl mx-auto grid gap-y-6 py-6 sm:grid-cols-2 sm:gap-8 sm:py-8 lg:grid-cols-4 lg:py-12 xl:py-16">
                       <a href="#" class="-m-3 p-3 flex flex-col justify-between rounded-lg hover:bg-gray-50">
                         <div class="flex md:h-full lg:flex-col">
                           <div class="flex-shrink-0">
@@ -251,30 +251,29 @@
                       </a>
                     </div>
                     <div class="bg-gray-50">
-                      <div class="max-w-7xl mx-auto space-y-6 px-4 py-5 sm:flex sm:space-y-0 sm:space-x-10 sm:px-6 lg:px-8">
+                      <div class="max-w-7xl mx-auto space-y-6 py-5 sm:flex sm:space-y-0 sm:space-x-10">
                         <div class="flow-root">
-                          <a href="#" class="-m-3 p-3 flex items-center rounded-md text-base font-medium text-gray-900 hover:bg-gray-100">
-                            <svg class="flex-shrink-0 h-6 w-6 text-gray-400" x-description="Heroicon name: outline/play" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z"></path>
-                              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                          <a href="{% url 'blog:category_list' %}" class="-m-3 p-3 flex items-center rounded-md text-base font-medium text-gray-900 hover:bg-gray-100">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0 h-6 w-6 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" />
                             </svg>
-                            <span class="ml-3">Watch Demo</span>
+                            <span class="ml-3">Categories</span>
                           </a>
                         </div>
                         <div class="flow-root">
-                          <a href="#" class="-m-3 p-3 flex items-center rounded-md text-base font-medium text-gray-900 hover:bg-gray-100">
-                            <svg class="flex-shrink-0 h-6 w-6 text-gray-400" x-description="Heroicon name: outline/check-circle" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                          <a href="{% url 'blog:tag_list' %}" class="-m-3 p-3 flex items-center rounded-md text-base font-medium text-gray-900 hover:bg-gray-100">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0 h-6 w-6 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 7h.01M7 3h5c.512 0 1.024.195 1.414.586l7 7a2 2 0 010 2.828l-7 7a2 2 0 01-2.828 0l-7-7A1.994 1.994 0 013 12V7a4 4 0 014-4z" />
                             </svg>
-                            <span class="ml-3">View All Products</span>
+                            <span class="ml-3">Tags</span>
                           </a>
                         </div>
                         <div class="flow-root">
-                          <a href="#" class="-m-3 p-3 flex items-center rounded-md text-base font-medium text-gray-900 hover:bg-gray-100">
-                            <svg class="flex-shrink-0 h-6 w-6 text-gray-400" x-description="Heroicon name: outline/phone" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"></path>
+                          <a href="{% url 'blog:series_list' %}" class="-m-3 p-3 flex items-center rounded-md text-base font-medium text-gray-900 hover:bg-gray-100">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0 h-6 w-6 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                             </svg>
-                            <span class="ml-3">Contact Sales</span>
+                            <span class="ml-3">Series</span>
                           </a>
                         </div>
                       </div>
@@ -432,39 +431,30 @@
             </div>
             <div class="py-6 px-5">
               <div class="grid grid-cols-2 gap-4">
-                <a href="#" class="rounded-md text-base font-medium text-gray-900 hover:text-gray-700">
-                  Pricing
-                </a>
-
-                <a href="#" class="rounded-md text-base font-medium text-gray-900 hover:text-gray-700">
-                  Docs
-                </a>
-
-                <a href="#" class="rounded-md text-base font-medium text-gray-900 hover:text-gray-700">
-                  Company
-                </a>
-
-                <a href="#" class="rounded-md text-base font-medium text-gray-900 hover:text-gray-700">
-                  Resources
-                </a>
-                <a href="#" class="rounded-md text-base font-medium text-gray-900 hover:text-gray-700">
+                <a href="{% url 'blog:post_archive' %}" class="rounded-md text-base font-medium text-gray-900 hover:text-gray-700">
                   Blog
-                </a>
-                <a href="#" class="rounded-md text-base font-medium text-gray-900 hover:text-gray-700">
-                  Contact Sales
                 </a>
               </div>
               <div class="mt-6">
-                <a href="#" class="w-full flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-indigo-600 hover:bg-indigo-700">
-                  Sign up
-                </a>
-                <p class="mt-6 text-center text-base font-medium text-gray-500">
-                  Existing customer?
-                  <!-- space -->
-                  <a href="#" class="text-indigo-600 hover:text-indigo-500">
-                    Sign in
+                {% if not user.is_authenticated %}
+                  <a href="{% url 'accounts:signup' %}" class="w-full flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-indigo-600 hover:bg-indigo-700">
+                    Sign up
                   </a>
-                </p>
+                  <p class="mt-6 text-center text-base font-medium text-gray-500">
+                    <a href="{% url 'account_login' %}" class="text-indigo-600 hover:text-indigo-500">
+                      Log in
+                    </a>
+                  </p>
+                {% else %}
+                  <a href="{% url 'accounts:profile' slug=user.slug %}" class="w-full flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-indigo-600 hover:bg-indigo-700">
+                    Your Profile
+                  </a>
+                  <p class="mt-6 text-center text-base font-medium text-gray-500">
+                    <a href="{% url 'account_logout' %}" class="text-indigo-600 hover:text-indigo-500">
+                      Log out
+                    </a>
+                  </p>
+                {% endif %}
               </div>
             </div>
           </div>
