--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -1,4 +1,4 @@
-{% load static socialaccount links_menu render_urls default_app_theme_set footer_set sitetree compress analytical google_analytics_gtag activeurl djversion_tags tailwind_tags weblog featured_post display %}
+{% load static socialaccount links_menu render_urls default_app_theme_set footer_set sitetree compress analytical google_analytics_gtag activeurl djversion_tags tailwind_tags weblog featured_post display markup_tags %}
 {% comment %} {% endcomment %}
 <!DOCTYPE html>
 <html lang="en" class="dark">
@@ -263,7 +263,7 @@
                       <nav class="grid gap-y-10 px-4 py-8 bg-white sm:grid-cols-2 sm:gap-x-8 sm:py-12 sm:px-6 lg:px-8 xl:pr-12">
                         <div>
                           <h3 class="text-sm font-medium tracking-wide text-gray-500 uppercase">
-                            The good stuff
+                            Read content
                           </h3>
                           <ul role="list" class="mt-5 space-y-6">
                             {% links_menu_n urls %}
@@ -271,7 +271,7 @@
                         </div>
                         <div>
                           <h3 class="text-sm font-medium tracking-wide text-gray-500 uppercase">
-                            Resources
+                            Featured Posts
                           </h3>
                           {% comment %} Either have featured posts here, or latest ones {% endcomment %}
                           {% comment %} Make the From the blog part bigger, but with two columns, one for new posts, one for featured {% endcomment %}
@@ -297,6 +297,52 @@
                     </div>
                   </div>
                 </div>
+
+                <div x-data="Components.popover({ open: false, focus: false })" x-init="init()" @keydown.escape="onEscape" @close-popover-group.window="onClosePopoverGroup">
+                  <button type="button" x-state:on="Item active" x-state:off="Item inactive" class="group bg-white rounded-md inline-flex items-center text-base font-medium hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 text-gray-500" :class="{ 'text-gray-900': open, 'text-gray-500': !(open) }" @click="toggle" @mousedown="if (open) $event.preventDefault()" aria-expanded="false" :aria-expanded="open.toString()">
+                    <span>Facts</span>
+                    <svg x-state:on="Item active" x-state:off="Item inactive" class="ml-2 h-5 w-5 group-hover:text-gray-500 text-gray-400" :class="{ 'text-gray-600': open, 'text-gray-400': !(open) }" x-description="Heroicon name: solid/chevron-down" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                      <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+                    </svg>
+                  </button>
+
+                  <div x-show="open" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0 -translate-y-1" x-transition:enter-end="opacity-100 translate-y-0" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100 translate-y-0" x-transition:leave-end="opacity-0 -translate-y-1" x-description="'Solutions' flyout menu, show/hide based on flyout menu state." class="hidden md:block absolute z-10 top-full inset-x-0 transform shadow-lg bg-white" x-ref="panel" @click.away="open = false" style="display: none;">
+                    <div class="max-w-7xl mx-auto grid gap-y-10 px-4 py-8 sm:grid-cols-2 sm:gap-x-8 sm:py-12 sm:px-6 lg:px-8 xl:pr-12">
+                      {% get_objects 10 as o_facts for facts.fact %}
+
+                      {% for o_fact in o_facts %}
+                        <article id="{{ o_fact.slug }}">
+                          {% if o_fact.link %}
+                            {% if o_fact.link.permalink %}
+                              <a href="{{ o_fact.link.permalink }}" class="-m-3 p-3 flex flex-col justify-between rounded-lg hover:bg-gray-50">
+                            {% else %}
+                              <a href="{{ o_fact.link.content_object.get_absolute_url }}" class="-m-3 p-3 flex flex-col justify-between rounded-lg hover:bg-gray-50">
+                            {% endif %}
+                          {% endif %}
+                          <div class="flex md:h-full lg:flex-col">
+                            <div class="ml-4 md:flex-1 md:flex md:flex-col md:justify-between lg:ml-0 lg:mt-4">
+                              <div>
+                                <p class="text-base font-medium text-gray-900">
+                                  {{ o_fact.title }}
+                                </p>
+                                <p class="mt-1 text-sm text-gray-500">
+                                  {{ o_fact.fact|apply_markup:"markdown"|apply_markup:"widont" }}
+                                </p>
+                              </div>
+                              {% if o_fact.link %}
+                                <p class="mt-2 text-sm font-medium text-indigo-600 lg:mt-4">Learn more <span aria-hidden="true">→</span></p>
+                              {% endif %}
+                            </div>
+                          </div>
+                          {% if o_fact.link %}
+                            </a>
+                          {% endif %}
+                        </article>
+                      {% endfor %}
+                    </div>
+                  </div>
+                </div>
+
                 {% if user.is_superuser %}
                   <a href="{% url 'admin:index' %}" class="text-base font-medium text-gray-500 hover:text-gray-900">
                     Admin
@@ -347,50 +393,7 @@
               <div class="mt-6 sm:mt-8">
                 <nav>
                   <div class="grid gap-7 sm:grid-cols-2 sm:gap-y-8 sm:gap-x-4">
-                    <a href="#" class="-m-3 flex items-center p-3 rounded-lg hover:bg-gray-50">
-                      <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-indigo-500 text-white sm:h-12 sm:w-12">
-                        <svg class="h-6 w-6" x-description="Heroicon name: outline/chart-bar" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path>
-                        </svg>
-                      </div>
-                      <div class="ml-4 text-base font-medium text-gray-900">
-                        Analytics
-                      </div>
-                    </a>
-                    <a href="#" class="-m-3 flex items-center p-3 rounded-lg hover:bg-gray-50">
-                      <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-indigo-500 text-white sm:h-12 sm:w-12">
-                        <svg class="h-6 w-6" x-description="Heroicon name: outline/cursor-click" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 15l-2 5L9 9l11 4-5 2zm0 0l5 5M7.188 2.239l.777 2.897M5.136 7.965l-2.898-.777M13.95 4.05l-2.122 2.122m-5.657 5.656l-2.12 2.122"></path>
-                        </svg>
-                      </div>
-                      <div class="ml-4 text-base font-medium text-gray-900">
-                        Engagement
-                      </div>
-                    </a>
-
-                    <a href="#" class="-m-3 flex items-center p-3 rounded-lg hover:bg-gray-50">
-                      <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-indigo-500 text-white sm:h-12 sm:w-12">
-                        <svg class="h-6 w-6" x-description="Heroicon name: outline/shield-check" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"></path>
-                        </svg>
-                      </div>
-                      <div class="ml-4 text-base font-medium text-gray-900">
-                        Security
-                      </div>
-                    </a>
-                    <a href="#" class="-m-3 flex items-center p-3 rounded-lg hover:bg-gray-50">
-                      <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-indigo-500 text-white sm:h-12 sm:w-12">
-                        <svg class="h-6 w-6" x-description="Heroicon name: outline/view-grid" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z"></path>
-                        </svg>
-                      </div>
-                      <div class="ml-4 text-base font-medium text-gray-900">
-                        Integrations
-                      </div>
-                    </a>
-                  </div>
-                  <div class="mt-8 text-base">
-                    <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500"> View all products <span aria-hidden="true">→</span></a>
+                    {% links_menu_n urls %}
                   </div>
                 </nav>
               </div>
