--- a/khoBlog/templates/account/profile.html
+++ b/khoBlog/templates/account/profile.html
@@ -1,5 +1,5 @@
 {% extends "sub_base.html" %}
-{% load account socialaccount static %}
+{% load static account socialaccount super_buttons %}
 
 {% block page_top_end %}
   {% if not enable_tailwind_flag and user.is_authenticated and not user.enable_tailwind or not enable_tailwind_flag and not user.is_authenticated %}
@@ -174,14 +174,18 @@
   {% elif enable_tailwind_flag or user.is_authenticated and user.enable_tailwind %}
     <article>
       <!-- Profile header -->
-      <div>
+      <section>
         <div>
           <img class="h-32 w-full object-cover lg:h-48" src="{% static 'khoBlog/img/khoBlog-gradient.png' %}" alt="">
         </div>
         <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
           <div class="-mt-12 sm:-mt-16 sm:flex sm:items-end sm:space-x-5">
             <div class="flex">
-              <img class="h-24 w-24 rounded-full ring-4 ring-white sm:h-32 sm:w-32" src="{{ object.profile_pic.url }}" alt="">
+              {% if object.profile_pic %}
+                <img class="h-24 w-24 rounded-full ring-4 ring-white sm:h-32 sm:w-32" src="{{ object.profile_pic.url }}" alt="Profile picture of {{ objec }}">
+              {% else %}
+                <img class="h-24 w-24 rounded-full ring-4 ring-white sm:h-32 sm:w-32" src="{% static 'khoBlog/img/default_profile_picture.png' %}" alt="Default profile picture">
+              {% endif %}
             </div>
             <div class="mt-6 sm:flex-1 sm:min-w-0 sm:flex sm:items-center sm:justify-end sm:space-x-6 sm:pb-1">
               <div class="sm:hidden 2xl:block mt-6 min-w-0 flex-1">
@@ -189,23 +193,15 @@
                   {{ object }}
                 </h1>
               </div>
-              <div class="mt-6 flex flex-col justify-stretch space-y-3 sm:flex-row sm:space-y-0 sm:space-x-4">
-                <button type="button" class="inline-flex justify-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pink-500">
-                  <!-- Heroicon name: solid/mail -->
-                  <svg class="-ml-1 mr-2 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                    <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"/>
-                    <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"/>
-                  </svg>
-                  <span>Message</span>
-                </button>
-                <button type="button" class="inline-flex justify-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pink-500">
-                  <!-- Heroicon name: solid/phone -->
-                  <svg class="-ml-1 mr-2 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                    <path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"/>
-                  </svg>
-                  <span>Call</span>
-                </button>
-              </div>
+              {% if object == user %}
+                <div class="mt-6 flex flex-col justify-stretch space-y-3 sm:flex-row sm:space-y-0 sm:space-x-4">
+                  {% twusb object %}
+                </div>
+              {% else %}
+                <a href="{{ object.get_absolute_admin_update_url }}" type="button" class="inline-flex justify-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pink-500">
+                  Edit in admin
+                </a>
+              {% endif %}
             </div>
           </div>
           <div class="hidden sm:block 2xl:hidden mt-6 min-w-0 flex-1">
@@ -214,9 +210,9 @@
             </h1>
           </div>
         </div>
-      </div>
+      </section>
 
-      <div x-data="{ tab: 'description' }">
+      <section x-data="{ tab: 'description' }">
         <!-- Tabs -->
         <div class="mt-6 sm:mt-2 2xl:mt-5">
           <div class="border-b border-gray-200">
@@ -230,13 +226,20 @@
                 <button :class="{ 'profile-active-tab': tab === 'comments' }" x-on:click.prevent="tab = 'comments'" class="text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
                   Comments
                 </button>
+
+                {% get_social_accounts object as accounts %}
+                {% if accounts.github and object.show_github %}
+                  <button :class="{ 'profile-active-tab': tab === 'github' }" x-on:click.prevent="tab = 'github'" class="text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
+                    Github
+                  </button>
+                {% endif %}
               </nav>
             </div>
           </div>
         </div>
 
         <!-- Description list -->
-        <div x-show="tab === 'description'" class="mt-6 max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
+        <section x-show="tab === 'description'" class="mt-6 max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
           <dl class="grid grid-cols-1 gap-x-4 gap-y-8 sm:grid-cols-2">
             {% if object.pk == user.pk or user.is_superuser %}
               <div class="sm:col-span-1">
@@ -290,9 +293,9 @@
               </dd>
             </div>
           </dl>
-        </div>
+        </section>
 
-        <div x-show="tab === 'comments'">
+        <section x-show="tab === 'comments'">
           <!-- Comments list -->
           <div class="mt-8 max-w-5xl mx-auto px-4 pb-12 sm:px-6 lg:px-8">
             <h2 class="text-sm font-medium text-gray-500">Comments</h2>
@@ -366,8 +369,34 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
+        </section>
+
+        {% if accounts.github and object.show_github %}
+          <section x-show="tab === 'github'">
+            <div class="mt-8 max-w-5xl mx-auto px-4 pb-12 sm:px-6 lg:px-8">
+              <h2 class="text-sm font-medium text-gray-500">Github account</h2>
+              {% for github in accounts.github %}
+                <div class="relative rounded-lg border border-gray-300 bg-white px-6 py-5 shadow-sm flex items-center space-x-3 hover:border-gray-400 focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-pink-500">
+                  <div class="flex-shrink-0">
+                    <img class="h-10 w-10 rounded-full" src="{{ github.extra_data.avatar_url }}" loading="lazy" alt="User's Github account's profile picture">
+                  </div>
+                  <div class="flex-1 min-w-0">
+                    <a href="{{ github.extra_data.html_url }}" class="focus:outline-none">
+                      <span class="absolute inset-0" aria-hidden="true"></span>
+                      <p class="text-sm font-medium text-gray-900">
+                        {{ github.extra_data.login }}
+                      </p>
+                      <p class="text-sm text-gray-500 truncate">
+                        {{ github.extra_data.bio }}
+                      </p>
+                    </a>
+                  </div>
+                </div>
+              {% endfor %}
+            </div>
+          </div>
+        </section>
+      {% endif %}
     </article>
   {% endif %}
 
