--- a/khoBlog/templates/tailwind/user_super_buttons.html
+++ b/khoBlog/templates/tailwind/user_super_buttons.html
@@ -13,50 +13,19 @@
         </button>
 
         <div x-show="open" x-transition:enter="transition ease-out duration-100" x-transition:enter-start="transform opacity-0 scale-95" x-transition:enter-end="transform opacity-100 scale-100" x-transition:leave="transition ease-in duration-75" x-transition:leave-start="transform opacity-100 scale-100" x-transition:leave-end="transform opacity-0 scale-95" class="origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 divide-y divide-gray-100 focus:outline-none" x-ref="menu-items" x-description="Dropdown menu, show/hide based on menu state." x-bind:aria-activedescendant="activeDescendant" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1" @keydown.arrow-up.prevent="onArrowUp()" @keydown.arrow-down.prevent="onArrowDown()" @keydown.tab="open = false" @keydown.enter.prevent="open = false; focusButton()" @keyup.space.prevent="open = false; focusButton()">
-          {% if object.get_absolute_publish_url or object.get_absolute_publish_withdrawn_url %}
-            {% if not object.pub_date %}
-              <div class="py-1" role="none">
-                {% if object.get_absolute_publish_url %}
-                  <a class="dropdown_item" href="{{ object.get_absolute_publish_url }}">
-                    Publish
-                  </a>
-                {% endif %}
+          <div class="py-1" role="none">
+            <a class="dropdown_item" href="{% url 'accounts:edit_password' %}">Modify Password</a>
+            <a class="dropdown_item" href="{% url 'accounts:connections' %}">Edit Connections</a>
+            <a class="dropdown_item" href="{% url 'accounts:email' %}">Edit Email</a>
+          </div>
 
-                {% if object.get_absolute_publish_withdrawn_url %}
-                  <a class="dropdown_item" href="{{ object.get_absolute_publish_withdrawn_url }}">
-                    Publish Withdrawn
-                  </a>
-                {% endif %}
-              </div>
-            {% endif %}
-          {% endif %}
-
-          {% if object.get_absolute_needs_review_url %}
+          {% if object.is_superuser %}
             <div class="py-1" role="none">
-              {% if not object.needs_reviewing %}
-                <a class="dropdown_item" href="{{ object.get_absolute_needs_review_url }}">
-                  Mark as Needs Reviewing
-                </a>
-              {% else %}
-                <button class="dropdown_item w-full text-left" disabled="disabled">
-                  Needs Reviewing
-                </button>
-              {% endif %}
+              <a class="dropdown_item" href="{{ object.get_absolute_admin_update_url }}">
+                Edit in Admin
+              </a>
             </div>
           {% endif %}
-          {% if object.get_absolute_clone_url %}
-            <div class="py-1" role="none">
-              <a href="{{ object.get_absolute_clone_url }}" class="dropdown_item">Duplicate</a>
-            </div>
-          {% endif %}
-          <div class="py-1" role="none">
-            <a class="dropdown_item" href="{{ object.get_absolute_admin_update_url }}">
-              Edit in Admin
-            </a>
-          </div>
-          <div class="py-1" role="none">
-            <a href="{{ object.get_absolute_delete_url }}" class="dropdown_item">Delete</a>
-          </div>
         </div>
       </span>
     </span>
