--- a/khoBlog/templates/flatpages/default.html
+++ b/khoBlog/templates/flatpages/default.html
@@ -64,7 +64,7 @@
               <div>
                 <h1 class="text-2xl font-bold text-gray-900">{{ page.title }}</h1>
                 <p class="mt-2 text-sm text-gray-500">
-                  Page #{{ page.pk }}
+                  Page <span class="font-bold">#{{ page.pk }}</span>
                 </p>
               </div>
               {% if user.is_superuser %}
