--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -96,7 +96,7 @@
     {% endif %}
   </head>
 
-  <body class="antialiased min-h-screen bg-white dark:bg-jumbo-900 ">
+  <body class="antialiased min-h-screen bg-white dark:bg-jumbo-900">
     {% if not debug_flag %}
       {% analytical_body_top %}
 
@@ -128,7 +128,9 @@
 
     <main class="pt-8 pb-12 lg:pt-16 lg:pb-20">
       <section class="max-w-7xl mx-auto flex justify-end px-4 2xl:px-0">
-        <input type="checkbox" name="" id="darkLightd" class="switch hidden md:flex -mt-6 lg:-mt-14 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 dark:focus:ring-flamingo-600/75 bg-gray-200" />
+        <button id="darkLightd" class="switch rotate-12 hidden md:flex -mt-6 lg:-mt-14 h-6 w-6 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:drop-shadow-2xl">
+          <span class="rounded-l-full inline-flex h-6 w-3 bg-white dark:bg-jumbo-900"></span><span class="rounded-r-full inline-flex h-6 w-3 dark:bg-white bg-jumbo-900"></span>
+        </button>
         <label for="darkLightd" class="cursor-pointer sr-only"></label>
       </section>
 
