--- a/khoBlog/templates/tailwind/menu.html
+++ b/khoBlog/templates/tailwind/menu.html
@@ -10,7 +10,9 @@
           <img class="h-8 w-auto sm:h-10" width="2.5rem" height="2.5rem" src="{% static 'khoBlog/img/RuthinkkTooBig.webp' %}" alt="Khodok's Logo">
         </a>
       </div>
-      <input type="checkbox" name="" id="darkLightm" class="switch md:hidden flex ml-auto mr-2 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 dark:focus:ring-flamingo-600/75 bg-gray-200" />
+      <button id="darkLightm" class="switch rotate-12 md:hidden flex ml-auto mr-2 h-6 w-6 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:drop-shadow-2xl">
+        <span class="rounded-l-full inline-flex h-6 w-3 bg-white dark:bg-jumbo-900"></span><span class="rounded-r-full inline-flex h-6 w-3 dark:bg-white bg-jumbo-900"></span>
+      </button>
       <label for="darkLightm" class="cursor-pointer sr-only"></label>
       <div class="-mr-2 -my-2 md:hidden">
         <button type="button" class="rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-jumbo-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500 dark:focus:ring-flamingo-600/75" @click="toggle" @mousedown="if (open) $event.preventDefault()" aria-expanded="true" :aria-expanded="open.toString()">
